--- a/frontend/src/components/UI_Components/loader.css
+++ b/frontend/src/components/UI_Components/loader.css
@@ -3,7 +3,7 @@
   height: 48px;
   border-radius: 50%;
   display: inline-block;
-  border-top: 4px solid #fff;
+  border-top: 4px solid #202327;
   border-right: 4px solid transparent;
   box-sizing: border-box;
   animation: rotation 1s linear infinite;
@@ -17,7 +17,7 @@
   width: 48px;
   height: 48px;
   border-radius: 50%;
-  border-left: 4px solid #ff3d00;
+  border-left: 4px solid #fe1120;
   border-bottom: 4px solid transparent;
   animation: rotation 0.5s linear infinite reverse;
 }
